--- a/02. PARTIE REGLEMENTAIRE/Article R*5332-6 - 29838554.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R*5332-6 - 29838554.md
@@ -7,10 +7,6 @@ départements sur lesquels s'étend le port.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-1440 du 4 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-6 (Ab)
+	  - DEPLACE: Décret n°2015-1756 du 24 décembre 2015 - art. 1
