--- a/02. PARTIE REGLEMENTAIRE/Article R5332-1 - 30031320.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-1 - 30031320.md
@@ -1,7 +1,7 @@
 # Article R5332-1
 
 Il est institué un groupe interministériel de sûreté du transport maritime et des opérations portuaires, présidé par le
-ministre chargé des transports. Outre son président, ce groupe comprend les douze membres suivants :
+ministre chargé des transports. Outre son président, ce groupe comprend douze membres, à raison de  :
 
 1° Deux désignés par le Premier ministre ;
 
@@ -19,8 +19,9 @@ ministre chargé des transports. Outre son président, ce groupe comprend les do
 
 8° Un désigné par le ministre des affaires étrangères.
 
-Le président du groupe interministériel peut être suppléé par l'un des membres désignés par le ministre chargé des
-transports. Le secrétariat du groupe interministériel est assuré par les services du ministre chargé des transports.
+Le ministre chargé des transports peut déléguer la présidence du groupe interministériel à une autorité qu'il désigne au sein
+du ministère chargé des transports. Le secrétariat du groupe interministériel est assuré par les services du ministre chargé
+des transports.
 
 Sur proposition de son président, le groupe peut entendre toute personne qualifiée.
 
@@ -30,10 +31,6 @@ Sur proposition de son président, le groupe peut entendre toute personne qualif
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-1 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
