--- a/02. PARTIE REGLEMENTAIRE/Article R5332-16 - 30031360.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-16 - 30031360.md
@@ -1,22 +1,18 @@
 # Article R5332-16
 
-L'organisme de sûreté habilité adresse au ministre chargé des transports un rapport d'activité annuel dont le cadre est fixé
-par arrêté de ce ministre.
+L'organisme de sûreté habilité adresse au ministre chargé des transports un rapport d'activité annuel selon les modalités
+fixées  par arrêté de ce ministre.
 
 **Liens relatifs à cet article**
-
-	**Cité par**:
-
-	  - Arrêté du 30 septembre 2010 - art. 1 (V)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Cité par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Arrêté du 30 septembre 2010 - art. 1 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. R321-13 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
