--- a/02. PARTIE REGLEMENTAIRE/Article R5332-17 - 30031362.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-17 - 30031362.md
@@ -3,12 +3,13 @@
 L'organisme de sûreté habilité garantit la confidentialité des faits, informations et documents dont il a connaissance dans
 l'exercice de ses missions. 
 
-Il ne confie l'exécution pour son compte des missions définies aux articles R. 5332-13 et R. 5332-14 qu'à des personnes
-agréées par le représentant de l'Etat dans le département. Cet agrément, valable sur l'ensemble du territoire national, est
-demandé par l'organisme de sûreté habilité qui établit, pour chaque agent, un dossier dont la composition et les modalités de
-transmission sont fixées par un arrêté conjoint des ministres de la justice, de l'intérieur, de la défense et des ministres
-chargés des transports et des douanes. Cet arrêté définit également la procédure d'agrément. L'agrément est délivré à l'issue
-d'une enquête administrative pour une durée qui ne peut excéder cinq ans. 
+Il ne confie l'exécution pour son compte des missions définies aux articles R. 5332-13 et R. 5332-14 qu'à des personnes dont
+il garantit les compétences en matière de sûreté maritime et portuaire et qui ont été agréées par le représentant de l'Etat
+dans le département dans lequel est situé le siège social de l'organisme.  Cet agrément, valable sur l'ensemble du territoire
+national, est demandé par l'organisme de sûreté habilité qui établit, pour chaque agent, un dossier dont la composition et
+les modalités de transmission sont fixées par un arrêté conjoint des ministres de la justice, de l'intérieur, de la défense
+et des ministres chargés des transports et des douanes. Cet arrêté définit également la procédure d'agrément. L'agrément est
+délivré à l'issue d'une enquête administrative pour une durée qui ne peut excéder cinq ans. 
 
 L'agrément ne peut être accordé en cas de condamnation criminelle ou correctionnelle incompatible avec les fonctions à
 exercer. Le représentant de l'Etat dans le département s'assure du respect de cette condition en demandant communication du
@@ -34,6 +35,10 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+
 	**Cité par**:
 
 	  - Arrêté du 15 avril 2009 - art. 1 (V)
@@ -44,19 +49,11 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 	  - Code des transports - art. R5773-1 (V)
 	  - Code des transports - art. R5783-1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-14 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
 	  - Code des transports - art. R5332-13 (V)
-	  - Code des transports - art. R5332-39 (V)
+	  - Code des transports - art. R5332-39 (M)
