--- a/02. PARTIE REGLEMENTAIRE/Article R5332-18 - 30031368.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-18 - 30031368.md
@@ -1,32 +1,27 @@
 # Article R5332-18
 
-Les dispositions de la présente section s'appliquent dans les ports soumis au règlement (CE) n° 725/2004 du Parlement
-européen et du Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et des installations portuaires. Le
-ministre chargé des transports en fixe la liste par arrêté.
+Les dispositions de la présente section s'appliquent dans les ports comprenant ou auxquels est rattachée au moins une
+installation portuaire soumise au règlement (CE) n° 725/2004 du Parlement européen et du Conseil du 31 mars 2004 relatif à
+l'amélioration de la sûreté des navires et des installations portuaires. Le ministre chargé des transports en fixe la liste
+par arrêté.
 
-Toutefois, un arrêté du ministre chargé des ports maritimes détermine, en fonction de l'évaluation obligatoire du risque de
-sûreté qu'il a fait réaliser en application du paragraphe 3 de l'article 3 du règlement mentionné au premier alinéa, dans
-quelle mesure les dispositions du présent chapitre s'appliquent à certaines catégories de navires effectuant des services
-intérieurs et aux ports et installations portuaires les desservant. Le ministre veille à ce que le niveau global de sûreté ne
-puisse en aucun cas être compromis.
+Cet arrêté, pris après avis du représentant de l'Etat dans le département, classe les ports et autres lieux d'escale par
+catégories en fonction de l'importance et de la nature de leur trafic et détermine dans quelle mesure les dispositions du
+présent chapitre s'appliquent à ces catégories.
 
 **Liens relatifs à cet article**
-
-	**Cité par**:
-
-	  - Arrêté du 10 avril 2007 - art. 1 (V)
-	  - Code des transports - art. R5332-4 (V)
-	  - Code des transports - art. R5332-7 (M)
-	  - Code des transports - art. R5783-2 (V)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Cité par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Arrêté du 10 avril 2007 - art. 1 (V)
+	  - Code des transports - art. R5332-4 (V)
+	  - Code des transports - art. R5332-7 (V)
+	  - Code des transports - art. R5783-2 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. R321-15 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
