--- a/02. PARTIE REGLEMENTAIRE/Article R5332-21 - 30031376.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-21 - 30031376.md
@@ -1,15 +1,32 @@
 # Article R5332-21
 
-Une évaluation de la sûreté portuaire, portant sur la zone portuaire de sûreté ainsi que sur toute zone adjacente intéressant
-la sûreté du port, est établie par les services de l'Etat ou par un organisme de sûreté habilité, selon des modalités
-définies par un arrêté du ministre chargé des transports. Cette évaluation tient compte notamment des dispositions des
-articles R. 1332-16, R. 1332-17 et R. 1332-18 du code de la défense relatives à la sécurité des activités d'importance
+Pour chaque port comprenant au moins une installation portuaire soumise au règlement (CE) n° 725/2004 du Parlement européen
+et du Conseil du 31 mars 2004, le représentant de l'Etat dans le département procède à une évaluation de la sûreté portuaire,
+le cas échéant avec le concours d'un organisme de sûreté habilité.
+
+La partie maritime de cette évaluation est établie par le préfet maritime ou par le délégué du Gouvernement pour l'action de
+l'Etat en mer.
+
+L'évaluation de la sûreté portuaire tient compte des dispositions de la directive nationale de sécurité établie en
+application des articles R. 1332-16 à R. 1332-18 du code de la défense relatives à la sécurité des activités d'importance
 vitale.
 
-L'évaluation est approuvée par arrêté conjoint du représentant de l'Etat dans le département et du préfet maritime ou du
-délégué du Gouvernement pour l'action de l'Etat en mer après avis du comité local de sûreté portuaire.
+L'évaluation de la sûreté portuaire est approuvée, pour une durée maximale de cinq ans, par arrêté conjoint du représentant
+de l'Etat dans le département et du préfet maritime ou du délégué du Gouvernement pour l'action de l'Etat en mer, après avis
+du comité local de sûreté portuaire. Elle est révisée à chaque fois que les circonstances le justifient et, dans tous les
+cas, avant sa date d'échéance. Ces révisions sont approuvées selon les mêmes conditions que l'évaluation initiale.
+
+Le rédacteur de l'évaluation de la sûreté portuaire établit un rapport rendant compte de la manière dont l'évaluation a été
+conduite, rappelant les vulnérabilités identifiées et détaillant les mesures permettant d'y remédier.
+
+Le contenu de l'évaluation de sûreté et ses modalités de réalisation sont fixés par un arrêté du ministre chargé des
+transports.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -17,20 +34,6 @@ délégué du Gouvernement pour l'action de l'Etat en mer après avis du comité
 	  - Arrêté du 22 avril 2008 - art. 5 (V)
 	  - Arrêté du 22 avril 2008 - art. Annexe 1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Cite**:
-
-	  - Code de la défense. - art. R1332-16 (V)
-	  - Code de la défense. - art. R1332-17 (V)
-	  - Code de la défense. - art. R1332-18 (M)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-18 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
