--- a/02. PARTIE REGLEMENTAIRE/Article R5332-22 - 30031378.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-22 - 30031378.md
@@ -1,34 +1,57 @@
 # Article R5332-22
 
-A l'issue de l'évaluation de la sûreté portuaire, un plan de sûreté portuaire est établi par l'autorité portuaire selon des
-modalités définies par un arrêté du ministre chargé des transports. 
+A l'issue de la première évaluation de la sûreté d'un port nouvellement créé, l'autorité portuaire établit le plan de sûreté
+qui lui est applicable, dans un délai inférieur à six mois fixé par le représentant de l'Etat dans le département. En cas de
+renouvellement de l'évaluation de sûreté et à chacune de ses échéances, l'autorité portuaire conduit dans le même temps la
+révision du plan de sûreté.
 
-Les éléments du plan relatifs aux plans d'eau de la zone portuaire de sûreté sont établis conjointement par l'autorité
-portuaire et par les services de l'Etat. 
+Pour les ports constitués d'une seule installation portuaire soumise au règlement (CE) n° 725/2004 du Parlement européen et
+du Conseil du 31 mars 2004 et pour lesquels l'évaluation de sûreté portuaire a conclu à la coïncidence des limites portuaires
+de sûreté et du périmètre de l'installation, le plan de sûreté de l'installation portuaire défini à l'article R. 5332-29
+incluant les dispositions relatives à la sûreté de la partie intéressée du plan d'eau tient lieu de plan de sûreté portuaire.
+
+Les éléments du plan relatifs aux plans d'eau situés dans les limites portuaires de sûreté sont établis conjointement par
+l'autorité portuaire et par les services de l'Etat.
 
 Le plan de sûreté portuaire détermine, pour chacun des niveaux de sûreté prévus par le règlement (CE) n° 725/2004 du
 Parlement européen et du Conseil du 31 mars 2004, les procédures à suivre, les mesures à mettre en place et les actions à
-mener en matière de sûreté. Il couvre l'ensemble de la zone portuaire de sûreté instituée par l'article L. 5332-1. Si le port
-contient au moins un point d'importance vitale au sens de l'article R. 1332-4 du code de la défense, le plan ou une partie de
-celui-ci tient lieu du plan particulier de protection du port prévu à l'article L. 1332-3 du même code par dérogation à la
-procédure définie à l'article R. 1332-34 du même code. Dans ce cas, la règle de protection fixée au dernier alinéa du même
-article R. 1332-24 ne fait pas obstacle à la communication au personnel du port de la partie du plan de sûreté portuaire
-contenant les informations et instructions opérationnelles que doit connaître ce personnel. 
+mener en matière de sûreté pour prévenir les menaces identifiées par l'évaluation de la sûreté portuaire et en reprend les
+prescriptions. Le plan de sûreté du port couvre l'ensemble des limites portuaires de sûreté en tenant compte des mesures de
+sûreté propres aux installations portuaires dont il assure la coordination.
+
+Si les limites portuaires de sûreté comportent une zone d'importance vitale au sens de l'article R. 1332-35 du code de la
+défense, le plan peut tenir lieu, en tout ou partie, de plan particulier de protection de zone prévu à l'article R. 1332-38
+de ce code, sur décision du représentant de l'Etat dans le département. Si le port contient au moins un point d'importance
+vitale, au sens de l'article R. 1332-4 du même code, situé hors d'une installation portuaire, le plan peut tenir lieu, en
+tout ou partie, de plan particulier de protection prévu par l'article R. 1332-34, sur décision du représentant de l'Etat dans
+le département. Dans ces deux cas, les dispositions du dernier alinéa de l'article R. 1332-24 du code de la défense ne font
+pas obstacle à la communication au personnel du port de la partie du plan de sûreté portuaire contenant les informations et
+instructions opérationnelles qui lui sont utiles.
 
 Le plan de sûreté portuaire est approuvé, après avis du comité local de sûreté portuaire, par un arrêté du représentant de
-l'Etat dans le département qui détermine les restrictions apportées à sa publicité. 
+l'Etat dans le département qui détermine les restrictions apportées à sa publicité.
 
-Le représentant de l'Etat dans le département atteste, par une déclaration de conformité dont la durée de validité peut être
-inférieure à celle du plan de sûreté portuaire approuvé, que le respect par le port des dispositions législatives et
-réglementaires en matière de sûreté a été vérifié et que l'exploitation du port respecte le plan. 
+Le plan de sûreté portuaire est approuvé pour une durée qui ne peut excéder la date de fin de validité de l'évaluation de
+sûreté portuaire. Il peut être modifié pendant sa période de validité sur instruction du ministre chargé des transports ou du
+représentant de l'Etat dans le département ou à l'initiative de l'autorité portuaire.
 
-Le ministre chargé des transports ou le représentant de l'Etat dans le département peut vérifier à tout moment la conformité
-du plan de sûreté portuaire à la réglementation en vigueur ainsi que le degré de sûreté effectivement assuré dans le port, au
-moyen d'un audit, éventuellement inopiné, réalisé par les services de l'Etat ou par un organisme de sûreté habilité.
-L'autorité portuaire autorise les personnes chargées de l'audit à accéder à tous les équipements intéressant la sûreté du
-port ainsi qu'à l'ensemble des documents ayant trait, directement ou indirectement, à celle-ci.
+Le plan de sûreté portuaire est modifié ou complété lors de tout changement ayant des conséquences en matière de sûreté ou à
+l'issue d'un audit. L'autorité portuaire examine les conséquences de l'approbation d'un nouveau plan de sûreté d'une
+installation portuaire ou de sa modification substantielle au regard de ses dispositions initiales et des implications des
+non-conformités constatées à l'issue d'un audit national de sûreté.
+
+Les projets de modification ou de complément sont portés à la connaissance du représentant de l'Etat dans le département qui
+approuve le plan modifié. Lorsque l'importance des modifications ou des compléments le justifie, le plan modifié est approuvé
+selon les mêmes modalités que le plan initial. Si, après une mise en demeure non suivie d'effet, une modification demandée
+par le représentant de l'Etat dans le département n'est pas portée dans le plan, celui-ci peut retirer l'approbation du plan.
+
+Un arrêté du ministre chargé des transports définit les modalités de rédaction et de révision des plans de sûreté portuaire.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -38,22 +61,11 @@ port ainsi qu'à l'ensemble des documents ayant trait, directement ou indirectem
 	  - Code des transports - art. R5336-3 (V)
 	  - Code des transports - art. R5336-7 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code de la défense. - art. L1332-3 (V)
-	  - Code de la défense. - art. R1332-24 (V)
-	  - Code de la défense. - art. R1332-34 (V)
-	  - Code de la défense. - art. R1332-4 (V)
-	  - Code des transports - art. L5332-1 (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-19 (Ab)
+	  - Code de la défense. - art. R1332-24
+	  - Code de la défense. - art. R1332-35
