--- a/02. PARTIE REGLEMENTAIRE/Article R5332-23 - 30031380.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-23 - 30031380.md
@@ -1,21 +1,22 @@
 # Article R5332-23
 
-Le plan de sûreté portuaire est élaboré pour une durée de cinq ans. Il peut être modifié pendant sa période de validité sur
-instruction du ministre chargé des transports ou du représentant de l'Etat dans le département ou à l'initiative de
-l'autorité portuaire. Une modification ne peut faire courir un nouveau délai de validité de cinq ans qu'en cas d'approbation
-selon les mêmes modalités que le plan initial.
+L'autorité portuaire est responsable de la mise en œuvre du plan de sûreté, sous réserve des obligations incombant à l'Etat.
 
-Le plan est modifié ou complété lors de tout changement ayant des conséquences en matière de sûreté. Les projets de
-modifications ou de compléments sont portés à la connaissance du représentant de l'Etat dans le département, qui peut
-prescrire l'approbation du plan modifié ou complété selon les mêmes modalités que le plan initial si l'importance des
-modifications ou des compléments le justifie.
+Le représentant de l'Etat dans le département contrôle la mise en œuvre des dispositions contenues dans le plan. Les
+militaires de la gendarmerie et les fonctionnaires et agents des services concourant à la sûreté des transports maritimes et
+des opérations portuaires l'informent des non-conformités constatées. Lorsqu'il est informé d'un défaut majeur de conformité,
+le représentant de l'Etat dans le département peut, sans préjudice des sanctions prévues à l'article R. 5336-2, imposer des
+mesures correctives à la charge de celle-ci. En l'absence de plan ou en cas d'insuffisance des mesures de sûreté à un poste
+d'accueil de navire non compris dans une installation portuaire, l'autorité portuaire établit à titre conservatoire une
+déclaration de sûreté telle que prévue par le code international pour la sûreté des navires et des installations portuaires
+adopté par l'Organisation maritime internationale le 12 décembre 2002, avec tout navire soumis à ce code y faisant escale.
 
-En cas d'insuffisance majeure, le plan de sûreté portuaire fait l'objet d'une modification qui donne lieu à approbation selon
-les mêmes modalités que le plan initial. Si, après une mise en demeure non suivie d'effet, cette modification n'intervient
-pas, le représentant de l'Etat dans le département peut retirer l'approbation du plan.
-
-Lorsqu'il constate, éventuellement lors d'un audit, un défaut majeur de conformité de la sûreté du port, le représentant de
-l'Etat dans le département peut, après une mise en demeure non suivie d'effet, retirer la déclaration de conformité du port.
+Le ministre chargé des transports ou le représentant de l'Etat dans le département peut réaliser un audit destiné à vérifier
+la conformité du plan à la réglementation en vigueur et la bonne mise en œuvre des conclusions de l'évaluation de sûreté. Cet
+audit peut être confié à un organisme de sûreté habilité. L'autorité portuaire autorise les personnes chargées de l'audit à
+accéder à l'ensemble des équipements intéressant la sûreté du port ainsi qu'aux documents relatifs à celle-ci. A l'issue de
+l'audit, elle soumet à l'approbation du représentant de l'Etat dans le département un plan comportant les actions
+correctrices nécessaires.
 
 **Liens relatifs à cet article**
 
@@ -23,10 +24,6 @@ l'Etat dans le département peut, après une mise en demeure non suivie d'effet,
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-20 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
