--- a/02. PARTIE REGLEMENTAIRE/Article R5332-24 - 30031382.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-24 - 30031382.md
@@ -2,7 +2,7 @@
 
 La mise en œuvre du plan de sûreté portuaire donne lieu à des exercices et des entraînements organisés par l'autorité
 portuaire dans des conditions fixées par un arrêté conjoint des ministres de l'intérieur, de la défense et des ministres
-chargés des finances et des transports.
+chargés des douanes et des transports.
 
 **Liens relatifs à cet article**
 
@@ -10,13 +10,9 @@ chargés des finances et des transports.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-21 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
