--- a/02. PARTIE REGLEMENTAIRE/Article R5332-26 - 30031388.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-26 - 30031388.md
@@ -1,9 +1,8 @@
 # Article R5332-26
 
-La liste des installations portuaires situées à l'intérieur de la zone portuaire de sûreté qui sont soumises aux dispositions
-de la présente sous-section est arrêtée pour chaque port par le représentant de l'Etat dans le département sur proposition de
-l'autorité portuaire. L'arrêté identifie l'exploitant, le périmètre et les principales caractéristiques physiques et
-fonctionnelles de chaque installation.
+La liste des installations portuaires qui sont soumises aux dispositions de la présente sous-section est arrêtée pour chaque
+port par le représentant de l'Etat dans le département sur proposition de l'autorité portuaire. L'arrêté identifie
+l'exploitant, le périmètre et les principales caractéristiques physiques et fonctionnelles de chaque installation.
 
 **Liens relatifs à cet article**
 
@@ -11,10 +10,6 @@ fonctionnelles de chaque installation.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-23 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
