--- a/02. PARTIE REGLEMENTAIRE/Article R5332-29 - 30031394.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-29 - 30031394.md
@@ -1,38 +1,46 @@
 # Article R5332-29
 
-A l'issue de l'évaluation de la sûreté de l'installation portuaire, un plan de sûreté de cette installation est établi par
-l'exploitant de celle-ci selon des modalités définies par un arrêté du ministre chargé des transports. 
-
-Ce plan de sûreté est approuvé par un arrêté du représentant de l'Etat dans le département après avis de l'autorité portuaire
-et du comité local de sûreté portuaire. L'avis de l'autorité portuaire est réputé favorable s'il n'est pas exprimé dans un
-délai de deux mois à compter de sa saisine par le représentant de l'Etat dans le département. Si l'installation portuaire est
-qualifiée de point d'importance vitale en application de l'article R. 1332-4 du code de la défense, son plan de sûreté vaut
-plan particulier de protection par dérogation à la procédure prévue à l'article R. 1332-34 du code de la défense, après mise
-en œuvre des procédures décrites à la sous-section 2 de la section 5 du chapitre II du titre III du livre III de la première
-partie réglementaire du même code. Dans ce cas, la règle de protection fixée au dernier alinéa de son article R. 1332-24 ne
-fait pas obstacle à la communication au personnel du port de la partie du plan de sûreté de l'installation portuaire que doit
-connaître ce personnel. 
+A l'issue de la première évaluation de la sûreté d'une installation portuaire, l'exploitant établit le plan de sûreté qui lui
+est applicable, dans un délai maximum de six mois fixé par le représentant de l'Etat dans le département. En cas de
+renouvellement de l'évaluation de la sûreté d'une installation portuaire, et à chacune de ses échéances, l'exploitant conduit
+dans le même temps la révision du plan de sûreté de cette installation. Un arrêté du ministre chargé des transports définit
+les modalités de rédaction et de révision des plans de sûreté des installations portuaires. 
 
 Le plan de sûreté de l'installation portuaire détermine, pour chacun des niveaux de sûreté prévus par le règlement (CE) n°
-725/2004 du Parlement européen et du Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et des
-installations portuaires, les procédures à suivre, les mesures à mettre en place et les actions à mener en matière de
-sûreté. 
+725/2004 du 31 mars 2004 du Parlement européen et du Conseil du 31 mars 2004, les procédures à suivre, les mesures à mettre
+en place et les actions à mener en matière de sûreté pour prévenir les menaces identifiées par l'évaluation de sûreté de
+l'installation portuaire et en reprend les prescriptions. Il prend en compte les prescriptions du représentant de l'Etat dans
+le département prévues par l'article R. 5332-36 si l'installation comporte une zone d'accès restreint. 
 
-Il prend en compte les prescriptions de l'arrêté du représentant de l'Etat dans le département prévu par l'article R.
-5332-36. 
+Si l'installation portuaire est qualifiée de point d'importance vitale au sens de l'article R. 1332-4 du code de la défense,
+son plan de sûreté peut, sur décision du représentant de l'Etat dans le département, tenir lieu de plan particulier de
+protection au sens de l'article R. 1332-34 du code de la défense. Dans ce cas, la règle de protection du secret de la défense
+nationale prévue par le dernier alinéa de l'article R. 1332-24 de ce code ne fait pas obstacle à la communication au
+personnel de l'installation portuaire de la partie du plan de sûreté de l'installation portuaire utile à ce personnel. 
 
-Le représentant de l'Etat dans le département atteste, par une déclaration de conformité dont la durée de validité peut être
-inférieure à celle du plan de sûreté de l'installation portuaire, que le respect par celle-ci des dispositions législatives
-et réglementaires en matière de sûreté a été vérifié et que l'exploitation de l'installation respecte le plan. 
+Le plan de sûreté est approuvé, après avis de l'autorité portuaire, par un arrêté du représentant de l'Etat dans le
+département qui détermine les restrictions apportées à sa publicité. L'avis sollicité est réputé favorable s'il n'est pas
+exprimé dans un délai d'un mois à compter de sa saisine par le représentant de l'Etat dans le département. 
 
-Le ministre chargé des transports ou le représentant de l'Etat dans le département peut vérifier à tout moment la conformité
-du plan de sûreté de l'installation portuaire à la réglementation en vigueur et au contexte ainsi que le degré de sûreté
-effectivement assuré dans l'installation, au moyen d'un audit, éventuellement inopiné, de celle-ci et de son plan de sûreté
-réalisé par les services de l'Etat ou par un organisme de sûreté habilité. L'exploitant de l'installation portuaire autorise
-les personnes chargées de l'audit à accéder à tous les équipements intéressant la sûreté de l'installation ainsi qu'à
-l'ensemble des documents ayant trait, directement ou indirectement, à la sûreté de celle-ci.
+La durée de validité du plan de sûreté de l'installation portuaire ne peut excéder la date d'échéance de l'évaluation de
+sûreté. Ce plan peut être modifié pendant sa période de validité sur instruction du ministre chargé des transports ou du
+représentant de l'Etat dans le département ou à l'initiative de l'exploitant de l'installation portuaire. 
+
+Le plan de sûreté d'une installation portuaire est modifié ou complété lors de tout changement ayant des conséquences en
+matière de sûreté ou à l'issue d'un audit. Les projets de modification ou de complément sont portés à la connaissance du
+représentant de l'Etat dans le département qui les fait reprendre directement dans le plan de sûreté de l'installation, à
+l'exception des modifications ou compléments majeurs pour lesquels il prescrit le suivi des mêmes procédures d'approbation
+que pour le plan initial. Si, après une mise en demeure non suivie d'effet, une modification demandée par le représentant de
+l'Etat dans le département n'est pas portée dans le plan, celui-ci peut retirer l'approbation du plan. 
+
+Un arrêté du ministre chargé des transports définit les modalités de rédaction et de révision des plans de sûreté des
+installations portuaires.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -43,21 +51,11 @@ l'ensemble des documents ayant trait, directement ou indirectement, à la sûret
 	  - Code des transports - art. R5336-3 (V)
 	  - Code des transports - art. R5336-7 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code de la défense. - art. R1332-24 (V)
-	  - Code de la défense. - art. R1332-34 (V)
-	  - Code de la défense. - art. R1332-4 (V)
-	  - Code des transports - art. R5332-36 (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-26 (Ab)
+	  - Code de la défense. - art. R1332-34
+	  - Code de la défense. - art. R1332-4
