--- a/02. PARTIE REGLEMENTAIRE/Article R5332-30 - 30031396.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-30 - 30031396.md
@@ -1,24 +1,27 @@
 # Article R5332-30
 
-Le plan de sûreté de l'installation portuaire est élaboré pour une durée de cinq ans. Il peut être modifié pendant sa période
-de validité sur instruction du ministre chargé des transports ou du représentant de l'Etat dans le département ou à
-l'initiative de l'exploitant de l'installation portuaire. Une modification ne peut faire courir un nouveau délai de validité
-de cinq ans qu'en cas d'approbation selon les mêmes modalités que le plan initial.
+L'exploitant de l'installation est responsable de la mise en œuvre du plan de sûreté de l'installation. 
 
-Le plan est modifié ou complété lors de tout changement ayant des conséquences en matière de sûreté. Les projets de
-modifications ou de compléments sont portés à la connaissance du représentant de l'Etat dans le département, qui peut
-prescrire l'approbation du plan modifié ou complété selon les mêmes modalités que le plan initial si l'importance des
-modifications ou des compléments le justifie.
+Le ministre chargé des transports ou le représentant de l'Etat dans le département peut vérifier à tout moment la conformité
+du plan de sûreté de l'installation portuaire à la réglementation en vigueur ainsi que l'application effective des mesures
+qu'il contient et le degré de sûreté réellement assuré dans l'installation, au moyen d'un audit, éventuellement inopiné,
+réalisé par les services de l'Etat ou par un organisme de sûreté habilité. L'exploitant de l'installation portuaire autorise
+les personnes chargées de l'audit à accéder à tous les équipements intéressant la sûreté de l'installation ainsi qu'à
+l'ensemble des documents ayant trait, directement ou indirectement, à la sûreté de celle-ci. A l'issue de l'audit,
+l'exploitant soumet à l'approbation du représentant de l'Etat dans le département un plan comportant les actions correctrices
+nécessaires. 
 
-En cas d'insuffisance majeure, le plan de sûreté de l'installation portuaire fait l'objet d'une modification donnant lieu à
-approbation selon les mêmes modalités que le plan initial. Si, après une mise en demeure non suivie d'effet, cette
-modification n'intervient pas, le représentant de l'Etat dans le département peut retirer l'approbation du plan.
+Le représentant de l'Etat dans le département contrôle la mise en œuvre des dispositions contenues dans le plan. Les
+gendarmes, fonctionnaires et agents des services concourant à la sûreté des transports maritimes et des opérations portuaires
+l'informent des non-conformités constatées. Lorsqu'il est informé d'un défaut majeur de conformité par les services de l'Etat
+ou à l'issue d'un audit, le représentant de l'Etat dans le département peut, après une mise en demeure non suivie d'effet,
+prendre des sanctions à l'encontre de l'exploitant de l'installation portuaire ou imposer des mesures correctives à la charge
+de celui-ci, ou suspendre l'autorisation d'exploitation. 
 
-Lorsqu'il constate, éventuellement lors d'un audit, un défaut majeur de conformité de la sûreté de l'installation portuaire,
-le représentant de l'Etat dans le département peut, après une mise en demeure non suivie d'effet, retirer la déclaration de
-conformité de cette installation. Dans ce cas, cette installation établit avec tout navire y faisant escale soumis au code
-international pour la sûreté des navires et des installations portuaires (ISPS) adopté par l'Organisation maritime
-internationale le 12 décembre 2002 une déclaration de sûreté telle que prévue par ce code.
+En l'absence de plan de sûreté en cours de validité ou si celui-ci présente des insuffisances, l'exploitation est couverte
+par l'établissement de déclarations de sûreté telles que prévues par le code international pour la sûreté des navires et des
+installations portuaires (code ISPS) adopté par l'Organisation maritime internationale le 12 décembre 2002 entre l'exploitant
+et tout navire soumis au code précité y faisant escale.
 
 **Liens relatifs à cet article**
 
@@ -26,10 +29,6 @@ internationale le 12 décembre 2002 une déclaration de sûreté telle que prév
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-27 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
