--- a/02. PARTIE REGLEMENTAIRE/Article R5332-32 - 30031400.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-32 - 30031400.md
@@ -1,9 +1,13 @@
 # Article R5332-32
 
-L'exploitant de l'installation portuaire désigne parmi son personnel, pour une durée maximale de cinq ans renouvelable, un
-agent de sûreté chargé de préparer et de mettre en œuvre le plan de sûreté de l'installation. Si celle-ci a été qualifiée de
-point d'importance vitale en application des dispositions de l'article R. 1332-4 du code de la défense, cet agent exerce les
-fonctions de délégué pour la défense et la sécurité prévues à l'article R. 1332-6 du même code. 
+L'exploitant de l'installation portuaire désigne dans la mesure du possible  parmi son personnel, pour une durée maximale de
+cinq ans renouvelable, un agent de sûreté de l'installation portuaire  chargé de préparer et de mettre en œuvre le plan de
+sûreté de l'installation. Si celle-ci a été qualifiée de point d'importance vitale en application des dispositions de
+l'article R. 1332-4 du code de la défense, cet agent exerce les fonctions de délégué pour la défense et la sécurité prévues à
+l'article R. 1332-6 du même code. 
+
+L'agent de sûreté de l'installation portuaire prend attache avec l'agent de sûreté du port aux fins de s'assurer de la
+cohérence des mesures de sûreté de l'installation portuaire avec l'organisation générale de la sûreté du port. 
 
 La désignation de l'agent de sûreté de l'installation portuaire est subordonnée à la possession d'un agrément délivré par le
 représentant de l'Etat dans le département dans les conditions définies ci-après et d'un certificat d'aptitude dont les
@@ -48,6 +52,10 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+
 	**Cité par**:
 
 	  - Décret n°2007-937 du 15 mai 2007 - art. 12 (Ab)
@@ -60,20 +68,12 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 	  - Code des transports - art. R5773-1 (V)
 	  - Code des transports - art. R5783-1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code de la défense. - art. R1332-4 (V)
-	  - Code de la défense. - art. R1332-6 (V)
-	  - Code des transports - art. R5332-39 (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-29 (Ab)
+	  - Code de la défense. - art. R1332-4
+	  - Code de la défense. - art. R1332-6
+	  - Code des transports - art. R5332-39
