--- a/02. PARTIE REGLEMENTAIRE/Article R5332-38 - 30031418.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-38 - 30031418.md
@@ -1,11 +1,20 @@
 # Article R5332-38
 
-Les inspecteurs et contrôleurs de l'inspection du travail ainsi que les fonctionnaires et agents publics exerçant des
-missions d'évaluation ou de contrôle en matière de sûreté ou de sécurité sont munis d'un titre de circulation national
-délivré par le directeur général des infrastructures, des transports et de la mer et sont autorisés à pénétrer dans les zones
-d'accès restreint mentionnées à l'article R. 5332-34.
+La circulation des personnes dans une zone d'accès restreint est subordonnée à la détention d'un document d'identité et de
+l'un des titres de circulation prévus par la présente sous-section. 
+
+La circulation d'un véhicule dans une zone d'accès restreint est subordonnée à la détention d'un laissez-passer, placé de
+manière apparente à l'avant du véhicule. Les véhicules sérigraphiés utilisés par les fonctionnaires de la police nationale,
+les militaires de la gendarmerie et les agents des douanes ne sont pas soumis à cette obligation. 
+
+La circulation des colis et marchandises dans une zone d'accès restreint est subordonnée à la détention d'un justificatif
+d'accès ou de transit.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -15,17 +24,9 @@ d'accès restreint mentionnées à l'article R. 5332-34.
 	  - Arrêté du 4 juin 2008 - art. 63 (V)
 	  - Arrêté du 4 juin 2008 - art. 7 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-35 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
