--- a/02. PARTIE REGLEMENTAIRE/Article R5332-39 - 30031420.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-39 - 30031420.md
@@ -1,10 +1,11 @@
 # Article R5332-39
 
-L'habilitation mentionnée à l'article R. 5332-37 est valable sur l'ensemble du territoire national. Elle est demandée par
-l'employeur qui établit pour chaque agent un dossier dont la composition et les modalités de transmission sont fixées par
-arrêté conjoint des ministres de la justice, de l'intérieur et de la défense et des ministres chargé des transports et chargé
-des douanes. Ce même arrêté définit en outre la procédure d'habilitation. L'habilitation est délivrée pour une durée qui ne
-peut excéder cinq ans par le représentant de l'Etat dans le département à l'issue d'une enquête administrative. 
+L'établissement d'un titre de circulation permanent est subordonné à la délivrance d'une habilitation, valable sur l'ensemble
+du territoire national. L'habilitation est demandée par l'employeur qui établit pour chaque agent un dossier dont la
+composition et les modalités de transmission sont fixées par arrêté conjoint des ministres de la justice, de l'intérieur et
+de la défense et des ministres chargé des transports et chargé des douanes. Elle est transmise par l'exploitant de
+l'installation auprès duquel l'employeur a demandé un titre d'accès.  L'habilitation est délivrée pour une durée qui ne peut
+excéder cinq ans par le représentant de l'Etat dans le département à l'issue d'une enquête administrative. 
 
 L'habilitation ne peut être accordée en cas de condamnation criminelle ou correctionnelle incompatible avec les fonctions à
 exercer. Le représentant de l'Etat dans le département s'assure du respect de cette condition en demandant communication du
@@ -30,7 +31,14 @@ représentant de l'Etat dans le département.
 Les décisions d'habilitation et celles de retrait ou de suspension d'habilitation sont notifiées à l'intéressé et à
 l'exploitant de l'installation portuaire.
 
+Les fonctionnaires de police, les militaires de la gendarmerie, les agents des douanes et les autres agents de l'Etat sont
+réputés détenir l'habilitation.
+
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -46,18 +54,6 @@ l'exploitant de l'installation portuaire.
 	  - Code des transports - art. R5773-1 (V)
 	  - Code des transports - art. R5783-1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-36 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. R5332-37 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
