--- a/02. PARTIE REGLEMENTAIRE/Article R5332-4 - 30031328.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-4 - 30031328.md
@@ -1,24 +1,30 @@
 # Article R5332-4
 
-Dans chacun des ports mentionnés à l'article R. 5332-18, un comité local de sûreté portuaire regroupe, sous la présidence du
-représentant de l'Etat dans le département, les membres suivants : 
+Dans chacun des ports mentionnés à l'article R. 5332-18, ou pour un groupe de ports ou pour l'ensemble des ports du
+département sur décision du représentant de l'Etat dans le département, un comité local de sûreté portuaire regroupe, sous la
+présidence du représentant de l'Etat dans le département ou son délégué, les représentants :
 
-1° Les chefs des services déconcentrés de l'Etat dont l'action concourt à la sûreté du transport maritime et des opérations
-portuaires ; 
+1° Des services déconcentrés de l'Etat compétents en matière de sûreté du transport maritime et des opérations portuaires ;
 
-2° Le préfet maritime ou le délégué du Gouvernement pour l'action de l'Etat en mer ; 
+2° Des forces de sécurité intérieure territorialement compétentes, notamment la gendarmerie maritime et les services de
+renseignement ;
 
-3° Le commandant de zone maritime pour les ports métropolitains ou le commandant supérieur des forces armées pour les ports
-d'outre-mer ; 
+3° Du préfet maritime ou du délégué du Gouvernement pour l'action de l'Etat en mer ;
 
-4° L'autorité portuaire et l'agent de sûreté portuaire mentionné à l'article R. 5332-25 ; 
+4° Du commandant de zone maritime pour les ports métropolitains ou du commandant supérieur des forces armées pour les ports
+d'outre-mer ;
 
-5° L'autorité investie du pouvoir de police portuaire ; 
+5° De l'autorité portuaire, dont l'agent de sûreté portuaire mentionné à l'article R. 5332-25 ;
 
-6° Le gestionnaire du port le cas échéant. 
+6° De l'autorité investie du pouvoir de police portuaire ;
+
+7° Du gestionnaire du port le cas échéant.
+
+Sur décision du président, un représentant du ministre chargé des transports ou toute personne qualifiée peut participer aux
+réunions du comité.
 
 Les délibérations du comité local de sûreté portuaire et les informations dont ses membres ont connaissance à l'occasion de
-leurs travaux sont secrètes.
+leurs travaux sont secrètes. Les avis formulés par ce comité sont publics.
 
 **Nota:**
 
@@ -26,6 +32,10 @@ Conformément à l'annexe 1 du décret n° 2015-622 du 5 juin 2015, le Comité l
 durée de cinq ans à compter du 8 juin 2015 (8 juin 2020).
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -36,19 +46,11 @@ durée de cinq ans à compter du 8 juin 2015 (8 juin 2020).
 	  - Code des transports - art. R5773-2 (V)
 	  - Code des transports - art. R5783-2 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-4 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R5332-18 (V)
-	  - Code des transports - art. R5332-25 (V)
+	  - Code des transports - art. R5332-18
+	  - Code des transports - art. R5332-25
