--- a/02. PARTIE REGLEMENTAIRE/Article R5332-43 - 30031428.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-43 - 30031428.md
@@ -1,9 +1,8 @@
 # Article R5332-43
 
 Un arrêté conjoint des ministres de l'intérieur et de la défense et des ministres chargé des douanes et chargé des transports
-fixe les caractéristiques des titres de circulation en zone d'accès restreint, leurs modalités de délivrance, ainsi que leurs
-règles de port et d'utilisation. Cet arrêté prévoit notamment les conditions dans lesquelles est délivré le titre de
-circulation temporaire des personnels navigants des navires.
+fixe les caractéristiques des titres de circulation et des laissez-passer  en zone d'accès restreint, leurs modalités de
+délivrance, ainsi que leurs règles de port et d'utilisation.
 
 **Liens relatifs à cet article**
 
@@ -11,10 +10,6 @@ circulation temporaire des personnels navigants des navires.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-40 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
