--- a/02. PARTIE REGLEMENTAIRE/Article R5332-45 - 30031436.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-45 - 30031436.md
@@ -1,9 +1,13 @@
 # Article R5332-45
 
-Un arrêté conjoint des ministres de l'intérieur et de la défense et des ministres chargé des transports et chargé des douanes
-fixe la liste des objets ou marchandises dont l'introduction dans les zones d'accès restreint et à bord des navires est
-interdite ou est soumise à des prescriptions particulières. Cette liste est portée à la connaissance des usagers par les
-exploitants des installations portuaires et les armateurs de navires.
+Les visites de sûreté mentionnées à l'article L. 5332-6 comprennent : 
+
+1° Les visites et inspections de quais, sites et locaux situés dans la zone d'accès restreint ; 
+
+2° Les contrôles des personnes, véhicules, bagages et marchandises aux accès de la zone d'accès restreint, qui constituent
+les opérations d'inspection-filtrage ; 
+
+3° Les contrôles des personnes, véhicules, bagages et marchandises se trouvant à l'intérieur de la zone d'accès restreint.
 
 **Liens relatifs à cet article**
 
@@ -11,13 +15,9 @@ exploitants des installations portuaires et les armateurs de navires.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-42 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
