--- a/02. PARTIE REGLEMENTAIRE/Article R5332-46 - 30031438.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-46 - 30031438.md
@@ -1,11 +1,13 @@
 # Article R5332-46
 
-L'exploitant de l'installation portuaire procède, dans les conditions prévues par l'article L. 5332-6, à la visite de sûreté
-des personnes et des véhicules pénétrant dans la zone d'accès restreint de l'installation portuaire, ainsi que des colis,
-bagages et marchandises qu'ils transportent. 
+En vue de prévenir l'introduction des objets et produits prohibés mentionnés à l'article R. 5332-18-1 à chacun des niveaux de
+sûreté, l'exploitant de l'installation portuaire procède, dans les conditions prévues par l'article L. 5332-6, aux opérations
+d'inspection-filtrage  des personnes et des véhicules pénétrant dans la zone d'accès restreint de l'installation portuaire,
+ainsi que des colis, bagages et marchandises qu'ils transportent. Les modalités de ces contrôles sont fixées par un arrêté
+conjoint des ministres de l'intérieur et de la défense et des ministres chargés des transports et des douanes. 
 
-L'armateur de navire procède, dans les conditions prévues par l'article L. 5332-6, à la visite de sûreté des personnes et des
-véhicules pénétrant dans le navire, ainsi que des colis, bagages et marchandises qu'ils transportent. 
+L'armateur de navire procède, dans les conditions prévues par l'article L. 5332-6, aux opérations d'inspection-filtrage  des
+personnes et des véhicules pénétrant dans le navire, ainsi que des colis, bagages et marchandises qu'ils transportent. 
 
 Un arrêté conjoint des ministres de l'intérieur et de la défense et des ministres chargé des transports et chargé des douanes
 définit : 
@@ -13,10 +15,16 @@ définit :
 1° La répartition des tâches entre l'exploitant de l'installation portuaire et les armateurs de navires pour les visites de
 sûreté et les conditions dans lesquelles il peut être éventuellement dérogé à cette répartition ; 
 
-2° Les prescriptions techniques applicables aux visites de sûreté et les modalités de détermination de la fréquence de
-celles-ci.
+Les exploitants d'installation et les armateurs de navires peuvent déroger aux mesures prévues par leurs plans de sûreté
+respectifs au moyen d'un accord portant sur la répartition des tâches de sûreté. Cet accord prend la forme d'une convention
+annexée au plan de sûreté de l'installation si l'installation accueille le navire de façon régulière ou habituelle, ou d'une
+déclaration de sûreté dans le cas d'escales occasionnelles.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -24,22 +32,14 @@ celles-ci.
 	  - Arrêté du 23 septembre 2009 - art. 8 (V)
 	  - Code des transports - art. R5332-47 (V)
 	  - Code des transports - art. R5332-48 (M)
-	  - Code des transports - art. R5332-50 (M)
+	  - Code des transports - art. R5332-50 (V)
 	  - Code des transports - art. R5336-1 (M)
 	  - Code des transports - art. R5336-2 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-43 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5332-6 (V)
+	  - Code des transports - art. L5332-6
