--- a/02. PARTIE REGLEMENTAIRE/Article R5332-47 - 30031440.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-47 - 30031440.md
@@ -4,7 +4,7 @@ L'exploitant de l'installation portuaire interdit l'accès de la zone d'accès r
 soumettre aux visites de sûreté prévues à l'article R. 5332-46. Il en avise sans délai les services de police ou de
 gendarmerie territorialement compétents. 
 
-L'armateur de navire interdit l'accès du navire à toute personne refusant de se soumettre aux visites de sûreté prévues à
+Le capitaine du navire interdit l'accès à bord  à toute personne refusant de se soumettre aux visites de sûreté prévues à
 l'article R. 5332-46. Il en avise sans délai les services de police ou de gendarmerie territorialement compétents.
 
 **Liens relatifs à cet article**
@@ -13,17 +13,13 @@ l'article R. 5332-46. Il en avise sans délai les services de police ou de genda
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-44 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R5332-46 (V)
+	  - Code des transports - art. R5332-46
 
 	**Cité par**:
 
