--- a/02. PARTIE REGLEMENTAIRE/Article R5332-48 - 30031442.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-48 - 30031442.md
@@ -2,13 +2,12 @@
 
 Les personnes chargées des visites de sûreté prévues par l'article R. 5332-46 doivent avoir reçu l'agrément du représentant
 de l'Etat dans le département et du procureur de la République territorialement compétent. L'agrément est demandé selon le
-cas par l'exploitant de l'installation portuaire, l'armateur de navire ou le prestataire de services portuaires qui
-constituent à cette fin, pour chaque agent qu'ils désignent, un dossier dont la composition et les modalités de transmission
-sont fixées par arrêté conjoint des ministres de la justice, de l'intérieur et de la défense et des ministres chargé des
-transports et chargé des douanes. Ce même arrêté définit par ailleurs la procédure d'agrément. 
+cas par l'exploitant de l'installation portuaire ou par  l'armateur de navire qui constituent à cette fin, pour chaque agent
+qu'ils désignent, un dossier dont la composition et les modalités de transmission sont fixées par arrêté conjoint des
+ministres de la justice, de l'intérieur et de la défense et des ministres chargé des transports et chargé des douanes. Ce
+même arrêté définit par ailleurs la procédure d'agrément. 
 
-La demande d'agrément au titre du présent article tient lieu sous le même dossier de demande d'habilitation au titre de
-l'article R. 5332-39. 
+La demande d'agrément au titre du présent article tient lieu de demande d'habilitation au titre de l'article R. 5332-39. 
 
 L'agrément est accordé pour une durée maximale de cinq ans renouvelable à l'issue d'une enquête administrative. 
 
@@ -32,30 +31,26 @@ dans le département ou le procureur de la République.
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+
 	**Cité par**:
 
 	  - Arrêté du 15 avril 2009 - art. 1 (V)
 	  - Arrêté du 23 septembre 2009 - art. 1 (V)
 	  - Décret n°2017-438 du 29 mars 2017 - art. 5 (V)
-	  - Code des transports - art. R5332-50 (M)
+	  - Code des transports - art. R5332-50 (V)
 	  - Code des transports - art. R5332-56 (V)
 	  - Code des transports - art. R5763-1 (V)
 	  - Code des transports - art. R5773-1 (V)
 	  - Code des transports - art. R5783-1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-45 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R5332-39 (V)
-	  - Code des transports - art. R5332-46 (V)
+	  - Code des transports - art. R5332-39
+	  - Code des transports - art. R5332-46
