--- a/02. PARTIE REGLEMENTAIRE/Article R5332-49 - 30031444.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-49 - 30031444.md
@@ -1,8 +1,7 @@
 # Article R5332-49
 
 Les agents chargés des visites de sûreté qui ont été agréés à cette fin se voient délivrer le titre de circulation mentionné
-au 1° de l'article R. 5332-37. Ils portent en permanence de manière apparente, outre ce titre, un signe distinctif de leur
-fonction.
+à l'article R. 5332-40. Ils portent en permanence de manière apparente, outre ce titre, un signe distinctif de leur fonction.
 
 **Liens relatifs à cet article**
 
@@ -10,17 +9,13 @@ fonction.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-46 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R5332-37 (V)
+	  - Code des transports - art. R5332-37
 
 	**Cité par**:
 
