--- a/02. PARTIE REGLEMENTAIRE/Article R5332-50 - 30031446.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-50 - 30031446.md
@@ -2,31 +2,26 @@
 
 L'employeur des personnes agréées en application de l'article R. 5332-48 dispense à celles-ci une formation initiale et une
 formation continue portant sur la déontologie des visites de sûreté, les principes généraux de sûreté et l'utilisation des
-dispositifs techniques de contrôle, ainsi que des entraînements périodiques à la détection des objets et substances
-illicites. Il ne peut faire exécuter les tâches prévues à l'article R. 5332-46 que par des personnes ayant suivi ces
-formations et ces entraînements. Les conditions d'approbation de ces formations sont fixées par arrêté du ministre chargé des
-transports.
+dispositifs techniques de contrôle, ainsi que des entraînements périodiques à la détection des objets et substances prohibés.
+Il ne peut faire exécuter les tâches prévues à l'article R. 5332-46 que par des personnes ayant suivi ces formations et ces
+entraînements. Les conditions d'approbation de ces formations sont fixées par arrêté du ministre chargé des transports.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
 	  - Arrêté du 23 septembre 2009 - art. 1 (V)
 	  - Code des transports - art. R5336-2 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-47 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
 	  - Code des transports - art. R5332-46 (V)
-	  - Code des transports - art. R5332-48 (V)
+	  - Code des transports - art. R5332-48 (M)
