--- a/02. PARTIE REGLEMENTAIRE/Article R5332-8 - 30031342.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-8 - 30031342.md
@@ -1,7 +1,7 @@
 # Article R5332-8
 
-Il est institué une commission d'habilitation des organismes de sûreté mentionnés à l'article L. 5332-7 et à l'article L.
-5251-3. 
+Il est institué une commission d'habilitation des organismes de sûreté mentionnés à l'article L. 5251-3 et à l'article L.
+5332-7. 
 
 Cette commission est présidée par le ministre chargé des transports. 
 
@@ -15,8 +15,8 @@ Outre son président, la commission comprend sept membres à raison de :
 
 4° Un désigné par le ministre chargé des douanes. 
 
-Le président de la commission peut être suppléé par l'un des membres désignés par le ministre chargé des transports. Sa voix
-est prépondérante en cas de partage. 
+La présidence de la commission peut être déléguée à une autorité désignée par le ministre chargé des transports au sein de
+son ministère. En cas de partage des voix, celle du président est prépondérante.  
 
 Le secrétariat de la commission d'habilitation est assuré par les services du ministre chargé des transports. 
 
@@ -28,24 +28,15 @@ La commission d'habilitation se réunit sur convocation de son président qui é
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+
 	**Cité par**:
 
 	  - Arrêté du 26 juillet 2007 - art. 2 (V)
 	  - Code des transports - art. R5332-10 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-7 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. L5251-3 (V)
-	  - Code des transports - art. L5332-7 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
