--- a/02. PARTIE REGLEMENTAIRE/Article R5332-11 - 30031348.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-11 - 30031348.md
@@ -1,9 +1,9 @@
 # Article R5332-11
 
-Les membres de la commission d'habilitation et les personnes habilitées à cet effet par le ministre chargé des transports ont
-accès aux locaux de tout organisme de sûreté habilité, à l'exception des parties à usage exclusif d'habitation et des locaux
-syndicaux, pour y procéder aux contrôles permettant de vérifier que l'organisme continue de répondre aux critères ayant
-justifié son habilitation. Celui-ci fournit à la demande tout document utile au contrôle et à l'évaluation de son activité.
+Les personnes habilitées par le ministre chargé des transports ont accès aux locaux de tout organisme de sûreté habilité, à
+l'exception des parties à usage exclusif d'habitation et des locaux syndicaux, pour y procéder aux contrôles permettant de
+vérifier que l'organisme répond  aux critères ayant justifié son habilitation. Celui-ci présente, à leur demande,  tout
+document utile au contrôle et à l'évaluation de son activité.
 
 Le coût de ces contrôles est à la charge de l'organisme de sûreté.
 
@@ -13,13 +13,9 @@ Le coût de ces contrôles est à la charge de l'organisme de sûreté.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-10 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
