--- a/02. PARTIE REGLEMENTAIRE/Article R5332-13 - 30031354.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-13 - 30031354.md
@@ -1,7 +1,7 @@
 # Article R5332-13
 
 L'Etat peut confier aux organismes de sûreté habilités la réalisation pour son compte des missions d'évaluation et de
-contrôles prévus au présent chapitre.
+contrôles prévues aux sections 3 à 7 du présent chapitre.
 
 **Liens relatifs à cet article**
 
@@ -9,13 +9,9 @@ contrôles prévus au présent chapitre.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-12, premier alinéa (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
