--- a/02. PARTIE REGLEMENTAIRE/Article R5332-14 - 30031356.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-14 - 30031356.md
@@ -1,9 +1,11 @@
 # Article R5332-14
 
-Les autorités portuaires, les exploitants d'installations portuaires et les armateurs de navires peuvent confier aux
-organismes de sûreté habilités l'établissement pour leur compte des évaluations de la sûreté et, sauf en ce qui concerne les
-plans d'eau de la zone portuaire de sûreté, des plans de sûreté définis à la section 3 du présent chapitre ainsi que des
-évaluations de la sûreté et des plans de sûreté des navires, ou leur demander d'y participer.
+Les autorités portuaires et les exploitants d'installations portuaires peuvent confier aux organismes de sûreté habilités
+l'établissement de leur contribution respective aux évaluations de la sûreté et la rédaction des plans de sûreté définis à la
+section 3 du présent titre, ou leur demander d'y participer.
+
+Les armateurs de navires peuvent confier aux organismes de sûreté habilités l'établissement des évaluations de la sûreté et
+des plans de sûreté des navires, ou leur demander d'y participer.
 
 **Liens relatifs à cet article**
 
@@ -11,10 +13,6 @@ plans d'eau de la zone portuaire de sûreté, des plans de sûreté définis à 
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-12 deuxième alinéa (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
