--- a/02. PARTIE REGLEMENTAIRE/Article R5332-15 - 30031358.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-15 - 30031358.md
@@ -1,7 +1,7 @@
 # Article R5332-15
 
-Un organisme qui a participé à l'établissement de l'évaluation de la sûreté portuaire ne peut participer à l'établissement du
-plan de sûreté portuaire correspondant.
+Un organisme qui a contribué à l'établissement de l'évaluation de la sûreté portuaire ne peut se voir confier l'établissement
+ou la mise à jour  du plan de sûreté portuaire correspondant.
 
 **Liens relatifs à cet article**
 
@@ -9,10 +9,6 @@ plan de sûreté portuaire correspondant.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-12, troisième alinéa (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
