--- a/02. PARTIE REGLEMENTAIRE/Article R5332-19 - 30031370.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-19 - 30031370.md
@@ -1,7 +1,11 @@
 # Article R5332-19
 
 La zone portuaire de sûreté instituée par l'article L. 5332-1 est délimitée par arrêté du représentant de l'Etat dans le
-département après avis de l'autorité portuaire.
+département après avis de l'autorité portuaire. A l'intérieur de cette zone, le préfet détermine des limites portuaires de
+sûreté comprenant les parties du port faisant l'objet de mesures de sûreté à au moins un des niveaux de sûreté prévus par le
+règlement (CE) n° 725/2004 du Parlement européen et du Conseil du 31 mars 2004. Ces limites sont déterminées à partir des
+propositions établies par l'autorité portuaire au vu des résultats de l'évaluation de sûreté portuaire. Elles comprennent
+obligatoirement les installations portuaires.
 
 **Liens relatifs à cet article**
 
@@ -9,14 +13,14 @@ département après avis de l'autorité portuaire.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-16 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5332-1 (V)
+	  - Code des transports - art. L5332-1
+
+	**Cité par**:
+
+	  - Code des transports - art. R5332-5 (V)
