--- a/02. PARTIE REGLEMENTAIRE/Article R5332-20 - 30031374.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-20 - 30031374.md
@@ -1,11 +1,13 @@
 # Article R5332-20
 
-L'autorité portuaire prend les mesures propres à assurer la sûreté des emprises terrestres dans la zone portuaire de sûreté
-en fonction du niveau de sûreté fixé par le Premier ministre en application du règlement (CE) n° 725/2004 du Parlement
-européen et du Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et des installations portuaires.
+L'autorité portuaire prend, en matière de sûreté des emprises terrestres et de la partie du plan d'eau comprises dans les
+limites portuaires de sûreté, les mesures de sa compétence décrites dans son plan de sûreté  en fonction du niveau de sûreté
+fixé par le Premier ministre en application du règlement (CE) n° 725/2004 du Parlement européen et du Conseil du 31 mars 2004
+relatif à l'amélioration de la sûreté des navires et des installations portuaires.
 
-L'autorité portuaire définit et met en œuvre les mesures de sûreté dans les emprises terrestres qui n'appartiennent pas à une
-installation portuaire et coordonne la définition et la mise en œuvre des mesures concernant ces installations.
+S'agissant des emprises terrestres, l'autorité portuaire définit et met en œuvre les mesures de sûreté dans les emprises
+terrestres qui n'appartiennent pas à une installation portuaire et coordonne la définition et la mise en œuvre des mesures
+concernant les installations portuaires.
 
 **Liens relatifs à cet article**
 
@@ -13,13 +15,9 @@ installation portuaire et coordonne la définition et la mise en œuvre des mesu
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-17 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
