--- a/02. PARTIE REGLEMENTAIRE/Article R5332-25 - 30031384.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-25 - 30031384.md
@@ -1,9 +1,11 @@
 # Article R5332-25
 
 L'autorité portuaire désigne parmi le personnel placé sous son autorité, pour une durée maximale de cinq ans renouvelable, un
-agent de sûreté chargé de préparer et de mettre en œuvre le plan de sûreté portuaire. Si la zone portuaire de sûreté contient
-une zone d'importance vitale, cet agent exerce les fonctions de délégué pour la défense et la sécurité de cette zone par
-dérogation aux dispositions de l'article R. 1332-37 du code de la défense. 
+agent de sûreté chargé de préparer et de mettre en œuvre le plan de sûreté portuaire. Si les limites portuaires de sûreté
+contiennent une zone d'importance vitale, cet agent exerce les fonctions de délégué pour la défense et la sécurité de cette
+zone par dérogation aux dispositions de l'article R. 1332-37 du code de la défense. Si elles contiennent un point
+d'importance vitale non compris dans une installation portuaire, cet agent exerce les fonctions de délégué pour la défense et
+la sécurité prévues par l'article R. 1332-6 du même code.
 
 L'agent de sûreté portuaire travaille en collaboration avec les agents de sûreté des installations portuaires mentionnés à
 l'article R. 5332-32 afin de coordonner la mise en œuvre du plan de sûreté portuaire avec celle des plans de sûreté des
@@ -52,6 +54,10 @@ L'agrément ouvre à son détenteur les mêmes droits dans le port dont il relè
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+
 	**Cité par**:
 
 	  - Arrêté du 15 avril 2009 - art. 1 (V)
@@ -63,21 +69,12 @@ L'agrément ouvre à son détenteur les mêmes droits dans le port dont il relè
 	  - Code des transports - art. R5773-1 (V)
 	  - Code des transports - art. R5783-1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code de la défense. - art. R1332-37 (M)
 	  - Code des transports - art. R5332-29 (V)
-	  - Code des transports - art. R5332-32 (V)
-	  - Code des transports - art. R5332-39 (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-22 (Ab)
+	  - Code des transports - art. R5332-32 (M)
+	  - Code des transports - art. R5332-39
