--- a/02. PARTIE REGLEMENTAIRE/Article R5332-27 - 30031390.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-27 - 30031390.md
@@ -1,9 +1,10 @@
 # Article R5332-27
 
 L'exploitant de l'installation portuaire prend les mesures propres à assurer la sûreté de cette installation, en tenant
-compte notamment des prescriptions définies à la section 4 relative aux zones d'accès restreint. Ces mesures correspondent au
-niveau de sûreté fixé par le Premier ministre en application du règlement (CE) n° 725/2004 du Parlement européen et du
-Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et des installations portuaires.
+compte notamment des prescriptions définies aux sections 4, 5 et 6 relatives aux catégories d'installations portuaires.   Ces
+mesures correspondent au niveau de sûreté fixé par le Premier ministre en application du règlement (CE) n° 725/2004 du
+Parlement européen et du Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et des installations
+portuaires.
 
 **Liens relatifs à cet article**
 
@@ -11,13 +12,9 @@ Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-24 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
