--- a/02. PARTIE REGLEMENTAIRE/Article R5332-28 - 30031392.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-28 - 30031392.md
@@ -1,25 +1,34 @@
 # Article R5332-28
 
-Une évaluation de la sûreté de l'installation portuaire est établie par les services de l'Etat ou par un organisme de sûreté
-habilité selon des modalités définies par un arrêté du ministre chargé des transports. Elle est approuvée par un arrêté du
-représentant de l'Etat dans le département après avis de l'autorité portuaire et du comité local de sûreté portuaire. L'avis
-de l'autorité portuaire est réputé favorable s'il n'est pas exprimé dans un délai de deux mois à compter de sa saisine par le
-représentant de l'Etat dans le département.
+Une évaluation de la sûreté de l'installation portuaire est établie par le représentant de l'Etat dans le département, le cas
+échéant avec le concours d'un organisme de sûreté habilité,  selon des modalités définies par un arrêté du ministre chargé
+des transports. L'évaluation est approuvée par un arrêté du représentant de l'Etat dans le département après avis de
+l'autorité portuaire pour une durée maximale de cinq ans. L'avis de l'autorité portuaire est réputé favorable s'il n'est pas
+exprimé dans un délai d'un mois à compter de sa saisine par le représentant de l'Etat dans le département.
+
+L'évaluation de la sûreté de l'installation portuaire tient compte des dispositions de la directive nationale de sécurité
+établie en application des articles R. 1332-16 à R. 1332-18 du code de la défense relatives à la sécurité des activités
+d'importance vitale. 
+
+Elle est révisée si ses conditions de validité évoluent et, dans tous les cas, avant d'avoir atteint sa date d'échéance. Ces
+révisions font l'objet d'une approbation dans les mêmes conditions que l'évaluation initiale. 
+
+Lors de la création d'une nouvelle installation portuaire, la première évaluation de sûreté doit être approuvée dans un délai
+maximum de six mois. 
+
+Le rédacteur d'une évaluation de la sûreté d'une installation portuaire établit un rapport rendant compte de la manière dont
+l'évaluation a été conduite, rappelant les vulnérabilités identifiées et détaillant les mesures permettant d'y remédier.
 
 **Liens relatifs à cet article**
-
-	**Cité par**:
-
-	  - Arrêté du 22 avril 2008 - art. 5 (V)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Cité par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Arrêté du 22 avril 2008 - art. 5 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. R321-25 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
