--- a/02. PARTIE REGLEMENTAIRE/Article R5332-31 - 30031398.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-31 - 30031398.md
@@ -1,23 +1,19 @@
 # Article R5332-31
 
 La mise en œuvre du plan de sûreté de l'installation portuaire donne lieu à des exercices et des entraînements organisés par
-l'exploitant de l'installation portuaire dans des conditions fixées par un arrêté du ministre chargé des transports.
+l'exploitant de l'installation portuaire dans des conditions fixées par l'arrêté prévu à l'article R. 5332-24.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
 	  - Arrêté du 2 juin 2008 - art. 2 (V)
 	  - Code des transports - art. R5336-2 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-28 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
