--- a/02. PARTIE REGLEMENTAIRE/Article R5332-34 - 30031408.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-34 - 30031408.md
@@ -1,19 +1,37 @@
 # Article R5332-34
 
 Une ou plusieurs zones d'accès restreint, éventuellement divisées en secteurs, peuvent être créées dans toute installation
-portuaire par arrêté du représentant de l'Etat dans le département conformément aux dispositions de l'article L. 5332-2,
-après avis de l'exploitant de l'installation portuaire et de l'autorité portuaire. 
+portuaire par arrêté du représentant de l'Etat dans le département conformément aux dispositions de l'article L. 5332-2. A
+cette fin, le représentant de l'Etat dans le département recueille l'avis : 
+
+1° De l'exploitant de l'installation et de l'autorité portuaire, cet avis étant réputé favorable s'il n'est pas rendu dans le
+délai d'un mois à compter de la saisine faite par le représentant de l'Etat dans le département ; 
+
+2° Des services de l'Etat territorialement compétents qui concourent à la sûreté portuaire et, le cas échéant, du comité
+local de sûreté portuaire.
 
 L'avis respectivement de l'exploitant de l'installation portuaire et de l'autorité portuaire est réputé favorable s'il n'est
 pas rendu dans le délai d'un mois à compter de la saisine par le représentant de l'Etat dans le département. 
 
-Une zone d'accès restreint est, sauf impossibilité technique avérée, créée dans toute installation portuaire dédiée à
-l'accueil à quai de navires à passagers ou de navires porte-conteneurs, pétroliers, gaziers ou transportant des marchandises
-dangereuses. L'exploitant qui estime se trouver dans l'impossibilité de satisfaire une des exigences liées à la création
-d'une zone d'accès restreint présente un dossier le justifiant au représentant de l'Etat dans le département qui recueille
-l'avis du comité local de sûreté portuaire avant de statuer.
+Une zone d'accès restreint est créée dans toute installation portuaire dédiée à l'accueil à quai de navires à passagers
+embarquant également des véhicules et de navires de croisière pour les escales têtes de ligne. Pour les autres installations
+portuaires au trafic à caractère sensible, notamment celles qui accueillent les autres types de navires à passagers, des
+navires porte-conteneurs, pétroliers, chimiquiers, gaziers ou transportant des marchandises dangereuses, les dispositions de
+la section 5 s'appliquent lorsqu'une zone d'accès restreint n'est pas créée. 
+
+Une zone d'accès restreint est créée à titre permanent ou temporaire et peut être activée de manière permanente ou
+temporaire. 
+
+L'exploitant qui estime être dans l'impossibilité de satisfaire une des exigences liées à la création d'une zone d'accès
+restreint présente un dossier au représentant de l'Etat dans le département, lequel fixe les mesures de sûreté alternatives.
+Ces mesures sont reconductibles si nécessaire après un réexamen dont le représentant de l'Etat dans le département définit la
+périodicité.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -21,21 +39,13 @@ l'avis du comité local de sûreté portuaire avant de statuer.
 	  - Arrêté du 22 avril 2008 - art. Annexe 4 (V)
 	  - Arrêté du 4 juin 2008 - art. 1 (V)
 	  - Arrêté du 4 juin 2008 - art. 47 (V)
-	  - Code des transports - art. R5332-38 (M)
+	  - Code des transports - art. R5332-38 (V)
 	  - Code des transports - art. R5336-2 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-31 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5332-2 (V)
+	  - Code des transports - art. L5332-2
