--- a/02. PARTIE REGLEMENTAIRE/Article R5332-36 - 30031414.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-36 - 30031414.md
@@ -1,19 +1,16 @@
 # Article R5332-36
 
-Le représentant de l'Etat dans le département fixe par arrêté, pour chaque zone d'accès restreint, les conditions
-particulières d'accès, de circulation et de stationnement des personnes, des véhicules et des marchandises ainsi que les
+Le représentant de l'Etat dans le département arrête, pour chaque zone d'accès restreint, les conditions particulières
+d'accès, de circulation et de stationnement des personnes, de leurs bagages,  des véhicules et des marchandises ainsi que les
 modalités de signalisation correspondantes. 
 
-La circulation des personnes et des véhicules dans une zone d'accès restreint est subordonnée au port apparent de l'un des
-titres de circulation définis dans la présente sous-section. 
-
-L'exploitant de l'installation portuaire construit autour de chaque zone d'accès restreint et entretient une clôture,
-conformément aux spécifications techniques arrêtées en application de l'article R. 5332-44, et prend pour cette zone les
-mesures de surveillance qui correspondent au niveau de sûreté fixé par le Premier ministre en application du règlement (CE)
-n° 725/2004 du Parlement européen et du Conseil du 31 mars 2004 relatif à l'amélioration de la sûreté des navires et des
-installations portuaires.
+Il fixe par arrêté les taux de contrôle applicables à chaque catégorie de personnel ayant accès à la zone d'accès restreint.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -26,18 +23,6 @@ installations portuaires.
 	  - Code des transports - art. R5336-1 (M)
 	  - Code des transports - art. R5336-2 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-33 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. R5332-44 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
