--- a/02. PARTIE REGLEMENTAIRE/Article R5332-37 - 30031416.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-37 - 30031416.md
@@ -1,31 +1,18 @@
 # Article R5332-37
 
-L'exploitant d'une installation portuaire n'autorise à pénétrer dans une zone d'accès restreint de cette installation que les
-personnes suivantes :
-
-1° Les personnels de l'autorité portuaire, les personnels de l'exploitant de l'installation portuaire, les personnels des
-services sociaux, ainsi que les personnels intervenant habituellement dans la zone d'accès restreint pour leur activité
-professionnelle, munis d'une habilitation et d'un titre de circulation ;
-
-2° Les fonctionnaires et agents chargés d'exercer habituellement les missions de police, de sécurité et de secours sur le
-port, munis d'une habilitation sauf en ce qui concerne les fonctionnaires et agents de l'Etat en uniforme ou munis d'un ordre
-de mission ou d'une commission d'emploi et d'un titre de circulation ;
-
-3° Les personnels navigants des navires accueillis par l'installation portuaire et les personnes se trouvant à bord de ces
-navires pour y effectuer des tâches professionnelles liées à l'exploitation du navire, munis d'un titre de circulation
-temporaire ;
-
-4° Les personnes admises pour une courte durée dans la zone d'accès restreint, munies d'un titre de circulation temporaire ;
-
-5° Les passagers des navires accueillis par l'installation portuaire, munis du titre de transport approprié ;
-
-6° Les agents des services de police, de sécurité ou de secours, dans le cadre de leurs interventions d'urgence ;
-
-7° Les représentants désignés par les organisations syndicales représentatives des personnels navigants des navires et des
-personnes se trouvant à bord de ces navires pour y effectuer des tâches professionnelles liées à l'exploitation du navire,
-munis d'un titre de circulation temporaire ou, exceptionnellement, d'une habilitation et d'un titre de circulation permanent.
+L'exploitant de l'installation portuaire met en place un dispositif destiné à n'autoriser l'accès dans la zone d'accès
+restreint qu'aux seules personnes, véhicules et marchandises autorisés. Lorsque la zone d'accès restreint est activée en
+permanence, il met en place et entretient une clôture. Lorsque la zone d'accès restreint est activée temporairement, la
+clôture est fixe ou mobile, selon les conclusions de l'évaluation de sûreté. L'exploitant matérialise les limites d'une zone
+d'accès restreint temporaire pour en rendre le périmètre identifiable. Pour chacune de ces zones, il prend les mesures de
+surveillance qui correspondent au niveau de sûreté fixé en application du règlement (CE) n° 725/2004 du 31 mars 2004 du
+Parlement européen et du Conseil du 31 mars 2004.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -45,14 +32,6 @@ munis d'un titre de circulation temporaire ou, exceptionnellement, d'une habilit
 	  - Code des transports - art. R5332-49 (V)
 	  - Code des transports - art. R5336-2 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-34 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
