--- a/02. PARTIE REGLEMENTAIRE/Article R5332-40 - 30031422.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-40 - 30031422.md
@@ -1,20 +1,23 @@
 # Article R5332-40
 
-Le titre de circulation permanent exigé au 1°, au 2° et à titre exceptionnel au 7° de l'article R. 5332-37 est délivré par
-l'exploitant de l'installation portuaire aux personnes habilitées pour la durée strictement nécessaire à l'exercice de
-l'activité en zone d'accès restreint de chacune d'elles, dans la limite de durée de validité de l'habilitation et sans
-pouvoir dépasser cinq ans. 
+Le titre de circulation permanent exigé dans les cas prévus par l'arrêté ministériel pris en application de l'article R.
+5332-36 est délivré par l'exploitant de l'installation portuaire aux personnes habilitées pour la durée nécessaire à
+l'exercice de l'activité en zone d'accès restreint de chacune d'elles, dans la limite de durée de validité de l'habilitation
+et sans pouvoir dépasser cinq ans. 
 
 Il précise, le cas échéant, les secteurs de la zone d'accès restreint auxquels son titulaire est autorisé à accéder. 
 
-L'exploitant de l'installation portuaire informe les personnes mentionnées au 1° et au 2° et, s'il y a lieu, celles
-mentionnées au 7° de l'article R. 5332-37, des principes généraux de sûreté et des règles particulières de sûreté à respecter
-à l'intérieur de la zone d'accès restreint. 
+L'exploitant de l'installation portuaire informe les personnes bénéficiaires d'un titre de circulation permanent  des
+principes généraux de sûreté et des règles particulières de sûreté à respecter à l'intérieur de la zone d'accès restreint. 
 
-Le titre de circulation est retiré par l'exploitant de l'installation portuaire lorsque l'une des conditions qui ont prévalu
-à sa délivrance n'est plus remplie.
+Le titre de circulation d'une personne ou le laissez-passer d'un véhicule  est retiré par l'exploitant de l'installation
+portuaire lorsque l'une des conditions qui ont prévalu à sa délivrance n'est plus remplie.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -24,18 +27,6 @@ Le titre de circulation est retiré par l'exploitant de l'installation portuaire
 	  - Code des transports - art. R5336-2 (M)
 	  - Code des transports - art. R5336-7 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-37 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. R5332-37 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
