--- a/02. PARTIE REGLEMENTAIRE/Article R5332-41 - 30031424.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-41 - 30031424.md
@@ -1,9 +1,10 @@
 # Article R5332-41
 
-L'exploitant de l'installation portuaire délivre aux personnes mentionnées au 3° et au 4° et le cas échéant à celles
-mentionnées au 7° de l'article R. 5332-37 un titre de circulation temporaire indiquant, notamment, la période d'autorisation
-d'accès. Il porte à leur connaissance les règles essentielles de sûreté à respecter à l'intérieur de la zone d'accès
-restreint.
+L'exploitant de l'installation portuaire délivre aux personnes prévues par l'arrêté ministériel pris en application de
+l'article R. 5332-36  un titre de circulation temporaire indiquant la période d'autorisation d'accès. Il porte à leur
+connaissance les règles essentielles de sûreté à respecter à l'intérieur de la zone d'accès restreint. L'exploitant de
+l'installation portuaire peut également délivrer aux personnes ayant formé une demande de titre de circulation permanent un
+titre de circulation temporaire, d'une durée d'un mois renouvelable.
 
 **Liens relatifs à cet article**
 
@@ -11,17 +12,9 @@ restreint.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-38 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. R5332-37 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cité par**:
 
