--- a/02. PARTIE REGLEMENTAIRE/Article R5332-5 - 30031330.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-5 - 30031330.md
@@ -2,27 +2,38 @@
 
 Le comité local de sûreté portuaire émet un avis sur : 
 
-1° Le projet d'évaluation de la sûreté portuaire et le projet de plan de sûreté portuaire ; 
+1° Les projets d'évaluation de la sûreté portuaire et les projets de plan de sûreté portuaire ; 
 
-2° Les projets d'évaluation de la sûreté des installations portuaires et les projets de plans de sûreté des installations
-portuaires ; 
+2° La cohérence des documents mentionnés au 1° et des mesures prises pour leur application avec les documents et mesures
+prévues pour assurer la sûreté des installations portuaires ; 
 
 3° Les projets de travaux de construction et de modernisation des infrastructures et des équipements portuaires, lorsque le
 représentant de l'Etat dans le département estime qu'ils présentent des enjeux en matière de sûreté ; 
 
 4° Sauf en cas d'urgence, les mesures de sûreté qu'il est proposé de prendre dans la zone maritime et fluviale de régulation
-définie à l'article L. 5331-1. 
+définie à l'article L. 5331-1 ; 
 
-Le comité local de sûreté portuaire peut également être consulté par le représentant de l'Etat dans le département en vue : 
+5° Le suivi des échéanciers de travaux documentaires, des plans d'actions pris pour remédier aux non-conformités constatées
+et la programmation des exercices. 
 
-1° D'émettre un avis sur toutes les questions relatives à la sûreté dans la zone portuaire de sûreté définie à l'article L.
-5332-1 ; 
+Le comité local de sûreté portuaire est informé des évaluations de sûreté des installations portuaires. 
 
-2° De proposer toute mesure concourant au renforcement du niveau de vigilance dans le port, notamment en ce qui concerne les
-actions d'information, de sensibilisation, les formations, les exercices et les entraînements ; 
+Lorsqu'il est consulté par le représentant de l'Etat dans le département, le comité local de sûreté portuaire émet un avis ou
+formule des propositions : 
 
-3° De proposer toute mesure de coordination entre les services publics compétents en matière de sûreté et les organismes
-privés s'il y a lieu.
+1° Sur les problématiques de sûreté propres à une installation portuaire, en particulier sur l'opportunité d'y créer une zone
+d'accès restreint ; 
+
+2° Sur toutes les questions relatives à la sûreté dans les limites portuaires de sûreté définies à l'article R. 5332-19 ; 
+
+3° Sur toute mesure propre à renforcer la vigilance, telle que des actions d'information, de sensibilisation ou de formation,
+ainsi que les exercices et entraînements ; 
+
+4° Sur toute mesure de coordination entre les services publics compétents en matière de sûreté et les organismes privés, s'il
+y a lieu ; 
+
+5° Sur les actions correctives proposées par les autorités portuaires ou les exploitants à la suite d'une inspection ou d'un
+audit.
 
 **Nota:**
 
@@ -35,15 +46,11 @@ durée de cinq ans à compter du 8 juin 2015 (8 juin 2020).
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-5 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5331-1 (V)
-	  - Code des transports - art. L5332-1 (V)
+	  - Code des transports - art. L5331-1
+	  - Code des transports - art. R5332-19 (V)
