--- a/02. PARTIE REGLEMENTAIRE/Article R5332-51 - 30031450.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-51 - 30031450.md
@@ -1,12 +1,34 @@
 # Article R5332-51
 
-Le représentant de l'Etat dans le département, assisté par l'autorité investie du pouvoir de police portuaire, organise et
-assure la surveillance des plans d'eau inclus dans la zone portuaire de sûreté.
+Lorsque l'évaluation de la sûreté de l'installation portuaire ne conclut pas à la nécessité de créer une zone d'accès
+restreint mais que la nature du trafic justifie qu'il soit procédé à des contrôles spécifiques, l'exploitant met en place un
+dispositif destiné à interdire l'accès de toute personne non autorisée et à empêcher l'introduction des articles mentionnés à
+l'article R. 5332-18-1. 
 
-Dans les ports dont la liste est fixée par arrêté conjoint des ministres de l'intérieur et de la défense et des ministres
-chargé des douanes et chargé des transports, les concours apportés par les services de l'Etat pour assurer la sûreté des
-plans d'eau et les modalités de coordination de ceux-ci sont définis par un arrêté conjoint du préfet maritime et du
-représentant de l'Etat dans le département.
+Le plan de sûreté de l'installation portuaire détaille le dispositif retenu et les mesures prises par l'exploitant, qui
+comprennent au moins, dès le niveau de sûreté 1 : 
+
+1° Le maintien d'une clôture autour de l'installation ; 
+
+2° L'information par affichage des restrictions de circulation et l'interdiction d'introduction d'armes à feu, d'explosifs et
+de produits incendiaires ; 
+
+3° La surveillance continue de l'installation portuaire et le contrôle systématique de ses accès ; 
+
+4° Le contrôle visuel aléatoire de l'intérieur de véhicules, des coffres, des sacs ou bagages des personnes, et des
+contenants pour les marchandises, ainsi qu'une inspection visuelle extérieure des contenants placés sous scellés douaniers. 
+
+Pour les niveaux de sûreté 2 et 3, le plan décrit respectivement les mesures additionnelles et spéciales mises en œuvre par
+l'exploitant, notamment en ce qui concerne les contrôles des véhicules, des sacs et des marchandises transportées. 
+
+Selon les conclusions de l'évaluation, le représentant de l'Etat peut conditionner la délivrance d'un titre d'accès permanent
+aux résultats d'une enquête administrative. 
+
+Les agents chargés des contrôles aux accès procèdent, avec l'assentiment des personnes concernées, aux inspections visuelles
+des sacs, colis, coffres et habitacles de véhicules. Ils peuvent interdire l'accès à l'installation aux personnes refusant de
+se soumettre à ces inspections. 
+
+En cas de non-respect des mesures de sûreté, l'exploitant sollicite l'intervention de la force publique.
 
 **Liens relatifs à cet article**
 
@@ -14,10 +36,6 @@ représentant de l'Etat dans le département.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-48 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
