--- a/02. PARTIE REGLEMENTAIRE/Article R5332-7 - 30031336.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-7 - 30031336.md
@@ -2,8 +2,8 @@
 
 Le préfet maritime ou le délégué du Gouvernement pour l'action de l'Etat en mer définit des mesures de sûreté particulières
 pour la partie maritime de la zone maritime et fluviale de régulation des ports figurant sur la liste prévue à l'article R.
-5332-18. Ces mesures déterminent pour chacun des niveaux de sûreté à respecter, les procédures à suivre, les mesures à mettre
-en place et les actions à mener en matière de sûreté.
+5332-18. Ces dispositions  déterminent pour chacun des niveaux de sûreté à respecter, les procédures à suivre, les mesures à
+mettre en place et les actions à mener en matière de sûreté. Le cas échéant, elles sont annexées au plan de sûreté portuaire.
 
 **Liens relatifs à cet article**
 
@@ -11,13 +11,9 @@ en place et les actions à mener en matière de sûreté.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-6-1 (Ab)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
 
 	**Cite**:
 
