--- a/02. PARTIE REGLEMENTAIRE/Article R5336-1 - 30031560.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5336-1 - 30031560.md
@@ -1,19 +1,14 @@
 # Article R5336-1
 
-En cas de manquement constaté aux dispositions : 
-
-1° Des articles R. 5332-25, R. 5332-32, R. 5332-36, R. 5332-40, R. 5332-46, R. 5332-47 et R. 5332-49 et des textes pris pour
-leur application ; 
-
-2° De l'arrêté du représentant de l'Etat dans le département prévu par l'article R. 5332-36, 
-
-le représentant de l'Etat dans le département peut, en tenant compte de la nature et de la gravité des manquements et
-éventuellement des avantages qui en sont tirés : 
+En cas de manquement constaté aux dispositions des articles R. 5332-25, R. 5332-32, R. 5332-36, R. 5332-38, R. 5332-40, R.
+5332-42, R. 5332-46 à R. 5332-49, R. 5332-51 à R. 5332-53 et des textes pris pour leur application, le représentant de l'Etat
+dans le département peut, en tenant compte de la nature et de la gravité des manquements et éventuellement des avantages qui
+en sont tirés :
 
 a) Soit prononcer à l'encontre de la personne physique auteur du manquement une amende administrative d'un montant maximal de
-750 euros ; 
+750 euros ;
 
-b) Soit suspendre l'habilitation prévue à l'article R. 5332-39 pour une durée ne pouvant pas excéder deux mois.
+b) Soit suspendre l'habilitation prévue à l'article R. 5332-39 pour une durée ne pouvant excéder deux mois.
 
 **Liens relatifs à cet article**
 
@@ -21,23 +16,9 @@ b) Soit suspendre l'habilitation prévue à l'article R. 5332-39 pour une durée
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-49, paragraphe I (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. R5332-25 (V)
-	  - Code des transports - art. R5332-32 (V)
-	  - Code des transports - art. R5332-36 (V)
-	  - Code des transports - art. R5332-39 (V)
-	  - Code des transports - art. R5332-40 (V)
-	  - Code des transports - art. R5332-46 (V)
-	  - Code des transports - art. R5332-49 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 2
 
 	**Cité par**:
 
