--- a/02. PARTIE REGLEMENTAIRE/Article R5336-2 - 30031562.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5336-2 - 30031562.md
@@ -1,16 +1,8 @@
 # Article R5336-2
 
-En cas de manquement constaté aux dispositions : 
-
-1° Des articles R. 5332-17, R. 5332-20, R. 5332-22, R. 5332-24, R. 5332-25, R. 5332-27, R. 5332-29, R. 5332-31, R. 5332-32 et
-des textes pris pour leur application ; 
-
-2° Des articles R. 5332-36, R. 5332-37, 
-R. 5332-40, R. 5332-41, R. 5332-42, R. 5332-46, R. 5332-47, R. 5332-50 et des textes pris pour leur application ; 
-
-3° Des arrêtés du représentant de l'Etat dans le département prévus par les articles R. 5332-34 et R. 5332-36, 
-
-le représentant de l'Etat dans le département peut, en tenant compte de la nature et de la gravité des manquements et
+En cas de manquement constaté aux dispositions des articles R. 5332-16, R. 5332-17, R. 5332-18-1, R. 5332-20 à R. 5332-32, R.
+5332-36 à R. 5332-38, R. 5332-40 à R. 5332-42, R. 5332-46 à R. 5332-53 et des textes pris pour leur application, le
+représentant de l'Etat dans le département peut, en tenant compte de la nature et de la gravité des manquements et
 éventuellement des avantages qui en sont tirés, prononcer à l'encontre de la personne morale responsable une amende
 administrative d'un montant maximal de 7 500 euros.
 
@@ -20,32 +12,9 @@ administrative d'un montant maximal de 7 500 euros.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-49, paragraphe II (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. R5332-17 (V)
-	  - Code des transports - art. R5332-20 (V)
-	  - Code des transports - art. R5332-22 (V)
-	  - Code des transports - art. R5332-24 (V)
-	  - Code des transports - art. R5332-27 (V)
-	  - Code des transports - art. R5332-29 (V)
-	  - Code des transports - art. R5332-31 (V)
-	  - Code des transports - art. R5332-34 (V)
-	  - Code des transports - art. R5332-36 (V)
-	  - Code des transports - art. R5332-37 (V)
-	  - Code des transports - art. R5332-40 (V)
-	  - Code des transports - art. R5332-41 (V)
-	  - Code des transports - art. R5332-42 (V)
-	  - Code des transports - art. R5332-46 (V)
-	  - Code des transports - art. R5332-47 (V)
-	  - Code des transports - art. R5332-50 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 2
 
 	**Cité par**:
 
