--- a/02. PARTIE REGLEMENTAIRE/Article R5336-7 - 30031574.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5336-7 - 30031574.md
@@ -1,19 +1,20 @@
 # Article R5336-7
 
-Est puni de l'amende prévue pour la contravention de la cinquième classe : 
+Est puni de l'amende prévue pour la contravention de la cinquième classe :
 
-1° Le fait d'introduire dans une zone d'accès restreint ou à bord d'un navire des objets ou marchandises inscrits sur la
-liste figurant dans l'arrêté prévu au premier alinéa de l'article R. 5332-45 ou de ne pas respecter des prescriptions
-particulières d'introduction applicables à ces objets ou marchandises dans cette zone ou à bord ; 
+1° - Le fait d'introduire dans une installation portuaire ou à bord d'un navire les objets ou produits prohibés mentionnés
+aux a, b et c du 2° de l'article R. 5332-18-1 ou de ne pas respecter les prescriptions particulières applicables à ces objets
+ou marchandises dans cette installation ou à bord prises par l'autorité mentionnée au premier alinéa de l'article R.
+5332-18-1 ;
 
 2° Le fait de circuler en zone d'accès restreint sans la possession d'un des titres de circulation prévus aux articles R.
-5332-40 et R. 5332-41 ; 
+5332-40 et R. 5332-41 ;
 
-3° Le fait, pour l'exploitant d'un port ou d'une installation portuaire, de faire obstacle à l'accomplissement d'une des
-visites d'audit prévues aux articles R. 5332-22 et R. 5332-29 ; 
+3° Le fait, pour l'exploitant d'un port ou d'une installation portuaire, de faire obstacle à l'accomplissement des visites
+prévues aux articles R. 5332-23 et R. 5332-30 ;
 
 4° Le fait, pour le responsable d'un organisme de sûreté habilité, de s'opposer à la réalisation d'un contrôle prévu à
-l'article R. 5332-11. 
+l'article R. 5332-11.
 
 La récidive des contraventions prévues au présent article est réprimée conformément aux articles 132-11 et 132-15 du code
 pénal.
@@ -24,20 +25,11 @@ pénal.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1756 du 24 décembre 2015 - art. 2
 
 	**Cite**:
 
-	  - Code pénal - art. 132-11 (M)
-	  - Code pénal - art. 132-15 (V)
-	  - Code des transports - art. R5332-11 (V)
-	  - Code des transports - art. R5332-22 (V)
-	  - Code des transports - art. R5332-29 (V)
-	  - Code des transports - art. R5332-40 (V)
-	  - Code des transports - art. R5332-45 (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R321-52 (Ab)
+	  - Code pénal - art. 132-11
+	  - Code pénal - art. 132-15
